--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,4 @@ project(mq)
 
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(
-        ${PROJECT_SOURCE_DIR}/include)
-
-add_executable(mq main.cpp MessageQueue.h SharedMutex.h ThreadPool.h ProducerConsumer.h)
+add_executable(mq main.cpp MessageQueue.h SharedMutex.h ThreadPool.h)
